# chattingapp_be/internal/models/device_signed_prekey.go
@@ -1,0 +1,20 @@
+package models
+
+import (
+	"database/sql"
+	"time"
+)
+
+type DeviceSignedPreKey struct {
+	ID        int64
+	DeviceID  int64
+	KeyID     int
+	PublicKey string
+	Signature string
+	Algorithm string
+	Version   int
+	IsActive  bool
+	CreatedAt time.Time
+	ExpiredAt sql.NullTime
+	RevokedAt sql.NullTime
+}
